updated image tags
 Committer: Kavi Wagholikar <waghsk@gmail.com>

--- a/mssql/.env
+++ b/mssql/.env
@@ -4,8 +4,8 @@ I2B2_MSSQL_TAG=release-v1.7.12.0001
 
 I2B2_ROOT_PASSWORD=i2b2cdiDemo@2020
 
-I2B2C_WEB_TAG=beta-0.3
-I2B2_ETL_TAG=beta-0.3
+I2B2C_WEB_TAG=1.0
+I2B2_ETL_TAG=1.0
 
 
 I2B2_DS_TYPE=mssql
