--- a/mssql/docker-compose.yml
+++ b/mssql/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.5'
 services:
 
   i2b2c-web:
-    image:  etl.i2b2c.org/i2b2c-web:${I2B2C_WEB_TAG}
+    image:  i2b2/i2b2c-web:${I2B2C_WEB_TAG}
     container_name: i2b2c-web
     ports:
       - "80:80"
@@ -15,7 +15,7 @@ services:
       - i2b2-net
 
   i2b2-etl:
-        image:  etl.i2b2c.org/i2b2-etl:${I2B2_ETL_TAG}
+        image:  i2b2/i2b2-etl:${I2B2_ETL_TAG}
         environment:
           - CRC_DB_HOST=${I2B2_DS_CRC_IP}
           - CRC_DB_PORT=${I2B2_DS_CRC_PORT}
@@ -132,7 +132,7 @@ services:
 
 
   gitlab:
-    image: etl.i2b2c.org/gitlab:beta-0.3
+    image: i2b2/gitlab:beta-0.3
     hostname: gitlab
     container_name: gitlab
     # restart: always #unless-stopped
@@ -154,7 +154,7 @@ services:
       
 
   gitlab-runner:
-    image: etl.i2b2c.org/gitlab-runner:beta-0.3
+    image: i2b2/gitlab-runner:beta-0.3
     restart: unless-stopped
     depends_on:
       - gitlab
@@ -167,7 +167,7 @@ services:
       - i2b2-net
 
   gitlab-etc-vol-loader:
-    image: etl.i2b2c.org/gitlab-etc-vol:beta-0.3
+    image: i2b2/gitlab-etc-vol:beta-0.3
     container_name: gitlab-etc-vol-loader
     volumes:
       - gitlab-etc-vol:/etc/gitlab
@@ -176,7 +176,7 @@ services:
       - i2b2-net
   
   gitlab-var-vol-loader:
-    image: etl.i2b2c.org/gitlab-var-vol:beta-0.3
+    image: i2b2/gitlab-var-vol:beta-0.3
     container_name: gitlab-var-vol-loader
     volumes:
       - gitlab-var-vol:/var/opt/gitlab
@@ -185,7 +185,7 @@ services:
       - i2b2-net
   
   gitlab-runner-etc-vol-loader:
-    image: etl.i2b2c.org/gitlab-runner-etc-vol:beta-0.3
+    image: i2b2/gitlab-runner-etc-vol:beta-0.3
     container_name: gitlab-runner-etc-vol-loader
     volumes:
       - gitlab-runner-etc-vol:/etc/gitlab-runner
