--- a/postgres/.env
+++ b/postgres/.env
@@ -3,8 +3,8 @@ I2B2_WILDFLY_TAG=release-v1.7.12a.0002
 
 I2B2_PG_TAG=test-v1
 
-I2B2_WEB_TAG=beta-0.3
-I2B2_ETL_TAG=beta-0.3
+I2B2_WEB_TAG=1.0
+I2B2_ETL_TAG=1.0
 
 
 I2B2_ROOT_PASSWORD=i2b2cdiDemo@2020
